# ccsearch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
demo/: ccs.tape  seed.sh  setup-env.sh
docs/: index.html  llms.txt  robots.txt  sitemap.xml
promo/: README.md
promo/opencli/: publish.sh  setup.md
promo/posts/: bilibili-script.md  devto.md  hacker-news.md  juejin.md  linkedin.md  lobsters.md  reddit.md  twitter-x.md  v2ex.md  xiaohongshu.md  zhihu.md
src/: db.rs  main.rs  resume.rs  search.rs  shell.rs  text.rs
