[package]
name = "ccsearch"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Fuzzy full-text search and instant resume for your Claude Code sessions — BM25 ranked, Chinese/CJK aware, cross-shell."
authors = ["yaalsn"]
license = "MIT"
repository = "https://github.com/yaalsn/ccsearch"
homepage = "https://github.com/yaalsn/ccsearch"
readme = "README.md"
keywords = ["claude", "search", "cli", "resume", "sqlite"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/assets", "/docs"]

[[bin]]
name = "ccs"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }   # bundled = SQLite+FTS5 baked in, every platform
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
